<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.williamgomez.turismo_turbo.Bares"
    android:background="@color/black"
    >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">



            <TextView
                style="@style/textviewtitle"
                android:text="@string/bar1tit"
                />

            <ImageView
                style="@style/imagestyle"
                android:src="@drawable/tilipias"/>


            <LinearLayout
                style="@style/linearlayoutv">

                <TextView
                    style="@style/textviewtext"
                    android:text="@string/bar1text"
                    />

            </LinearLayout>


            <TextView
                style="@style/textviewtitle"
                android:text="@string/bar2tit"
                />

            <ImageView
                style="@style/imagestyle"
                android:src="@drawable/discotecaextasis"/>


            <LinearLayout
                style="@style/linearlayoutv">

                <TextView
                    style="@style/textviewtext"
                    android:text="@string/bar2text"
                    />

            </LinearLayout>

            <TextView
                style="@style/textviewtitle"
                android:text="@string/bar3tit"
                />

            <ImageView
                style="@style/imagestyle"
                android:src="@drawable/simona"/>


            <LinearLayout
                style="@style/linearlayoutv">

                <TextView
                    style="@style/textviewtext"
                    android:text="@string/bar3text"
                    />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</LinearLayout>
